--- a/host/CMakeLists.txt
+++ b/host/CMakeLists.txt
@@ -3,8 +3,9 @@ FILE(GLOB_RECURSE FILELIST *.cpp *.hpp *.c *.h)
 LIST(LENGTH FILELIST LENGTH)
 IF(LENGTH GREATER 0)
 	ADD_EXECUTABLE(${NAME} ${FILELIST})
+	SET_TARGET_PROPERTIES(${NAME} PROPERTIES LINK_FLAGS "/SUBSYSTEM:windows")
 	TARGET_LINK_LIBRARIES(${NAME})
-	SET(LIBS )
+	SET(LIBS)
 	LIST(LENGTH LIBS LENGTH)
 	IF(LENGTH GREATER 0)
 		ADD_DEPENDENCIES(${NAME} ${LIBS})
