--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,7 +25,8 @@ ELSEIF(WIN32)
 	ADD_DEFINITIONS(-DWIN32)
 ENDIF()
 
-ADD_SUBDIRECTORY(sign .)
 ADD_SUBDIRECTORY(host .)
 ADD_SUBDIRECTORY(start .)
+ADD_SUBDIRECTORY(sign .)
+ADD_SUBDIRECTORY(package .)
 ADD_SUBDIRECTORY(modules .)
