--- a/host/CMakeLists.txt
+++ b/host/CMakeLists.txt
@@ -1,9 +1,9 @@
 SET(NAME host)
-FILE(GLOB_RECURSE FILELIST *.cpp *.hpp *.c *.h *.rc)
+FILE(GLOB_RECURSE FILELIST *.cpp *.hpp *.c *.h *.rc *.ico)
 LIST(LENGTH FILELIST LENGTH)
 IF(LENGTH GREATER 0)
 	ADD_EXECUTABLE(${NAME} ${FILELIST})
-	SET_SOURCE_FILES_PROPERTIES(main.rc PROPERTIES LANGUAGE RC)
+	SET_SOURCE_FILES_PROPERTIES(main.rc main.ico PROPERTIES LANGUAGE RC)
 	SET_TARGET_PROPERTIES(${NAME} PROPERTIES LINK_FLAGS "/SUBSYSTEM:windows")
 	TARGET_LINK_LIBRARIES(${NAME})
 	SET(LIBS)
